--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbg pt-2 navbar-expand-xl">
+        <nav class="navbar navbg pt-2 navbar-expand-md">
             <div class="container-fluid">
                 <a class="navbar-brand logo-style" href="#">LOGO</a>
                 <!--------------------------------->
@@ -42,23 +42,18 @@
             </div>
         </nav>
     </header>
-
     <!------------------------------------------------------------------------->
-
     <div id="mainVision">
-        <div id="mVimg">
-            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 885 367" fill="none">
-                <path d="M1 1H225.64V37.96H44.2V159.88H206.44V196.84H44.2V328.84H232.84V365.8H1V1ZM319.24 1H423.4C461.16 1 491.48 11.08 514.36 31.24C537.24 51.4 548.68 77.96 548.68 110.92C548.68 133.32 542.6 153.32 530.44 170.92C518.28 188.52 501.48 201.64 480.04 210.28L585.16 365.8H533.8L437.8 219.88C432.532 220.314 427.245 220.475 421.96 220.36H361V365.8H319.24V1ZM361 184.36H413.8C443.88 184.36 466.52 178.2 481.72 165.88C496.92 153.56 504.52 135.24 504.52 110.92C504.52 86.92 497.08 68.6 482.2 55.96C467.32 43.32 445.8 37 417.64 37H361V184.36ZM654.76 1H760.36C797.16 1 827 11.32 849.88 31.96C872.76 52.6 884.2 79.56 884.2 112.84C884.2 134.6 879.16 154.04 869.08 171.16C859 188.28 844.6 201.8 825.88 211.72C807.16 221.64 785.32 226.6 760.36 226.6H696.52V365.8H654.76V1ZM696.52 190.6H752.68C780.84 190.6 802.44 184.04 817.48 170.92C832.52 157.8 840.04 138.92 840.04 114.28C840.04 89.64 832.44 70.6 817.24 57.16C802.04 43.72 780.52 37 752.68 37H696.52V190.6Z" stroke="#E3332B" />
-            </svg>
+        <!----------------------------------->
+        <div id="mVcontent">
+            <div id="mVText">
+                <span class="mVTitle">了解你需要的，提供你適合的</span>
+                <br>
+                <span class="mVDes">八年以上的微軟ERP顧問服務經驗，微軟 Partner Network 認證夥伴，提供 Microsoft Dynamics 365、 Microsoft Azure 雲端平台等顧問服務。</span>
+            </div>
+            <a href="#prd_1" id="scroll-down" class="scrollBtnStyle"></a>
         </div>
         <!----------------------------------->
-        <div id="mVText">
-            <span class="mVTitle">了解你需要的，提供你適合的</span>
-            <br>
-            <span class="mVDes">八年以上的微軟ERP顧問服務經驗，微軟 Partner Network 認證夥伴，提供 Microsoft Dynamics 365、 Microsoft Azure 雲端平台等顧問服務。</span>
-        </div>
-        <!----------------------------------->
-        <a href="#" id="scroll-down"><img src="img/arrow.png"></a>
     </div>
     <!--------------------------------------------------------->
     <main>
@@ -67,15 +62,15 @@
                 <div class="prd-title-block">
                     <div class="block-title"><span>Solution</span><br>解決方案</div>
                     <div class="prd-vis scroll_fast">
-                        <img src="img/SOLUTION.png" width="140">
+                        <img src="img/SOLUTION.png">
                     </div>
                 </div>
                 <!-------------------------------------------->
                 <div class="prd-content-block row">
-                    <div class="prd-img col-12 col-md-5">
+                    <div class="prd-img col-12 col-md-4">
                         <img src="img/foto.png">
                     </div>
-                    <div class="prd-text col-12 col-md-7">
+                    <div class="prd-text col-12 col-md-8">
                         <h1>替您規劃最適合的解決方案</h1>
                         <p>ERP系統的成功，須涉及許多專業如 會計、資訊、成本、管理等，一般中小企業不容易全面駕馭。可創的專業團隊就像是您的智囊團，緊密配合企業現狀提供所需協助，您只要全心全意進行你的計劃，不讓艱深、費神的技術問題磨耗你的熱情。</p>
                         <p>除此之外，加入ERP系統後，企業能得到多少的幫助，決定關鍵就在於系統能否跟隨企業內外的變化而改變。我們不僅能快速貼合組織運作，隨時間深化、細化各個作業環節，更可以運用各種管理技術、結合新科技裝置來逐步提升效率，是您永續經營的最佳夥伴。</p>
@@ -84,20 +79,21 @@
                 </div>
             </div>
         </div>
+        <!----------------------------------->
         <div id="prd_2" class="container-fliud">
             <div class="prd-block">
                 <div class="prd-title-block">
                     <div class="block-title"><span>Solution</span><br>解決方案</div>
                     <div class="prd-vis scroll_fast">
-                        <img src="img/SOLUTION.png" width="140">
+                        <img src="img/SOLUTION.png">
                     </div>
                 </div>
                 <!-------------------------------------------->
                 <div class="prd-content-block row">
-                    <div class="prd-img col-12 col-md-5">
+                    <div class="prd-img col-12 col-md-4">
                         <img src="img/foto.png">
                     </div>
-                    <div class="prd-text col-12 col-md-7">
+                    <div class="prd-text col-12 col-md-8">
                         <h1>替您規劃最適合的解決方案</h1>
                         <p>ERP系統的成功，須涉及許多專業如 會計、資訊、成本、管理等，一般中小企業不容易全面駕馭。可創的專業團隊就像是您的智囊團，緊密配合企業現狀提供所需協助，您只要全心全意進行你的計劃，不讓艱深、費神的技術問題磨耗你的熱情。</p>
                         <p>除此之外，加入ERP系統後，企業能得到多少的幫助，決定關鍵就在於系統能否跟隨企業內外的變化而改變。我們不僅能快速貼合組織運作，隨時間深化、細化各個作業環節，更可以運用各種管理技術、結合新科技裝置來逐步提升效率，是您永續經營的最佳夥伴。</p>
@@ -106,13 +102,63 @@
                 </div>
             </div>
         </div>
-
+        <!----------------------------------->
+        <div id="prd_end" class="d-flex align-items-end flex-column">
+            <div class="mt-auto"><a href="#" id="scroll-top" class="scrollBtnStyle"></a></div>
+        </div>
     </main>
     <!--------------------------------------------------------->
     <footer>
-        
+        <div class="row no-gutters">
+            <div id="logoBlock" class="col-12 col-md-4">
+                <div class="container">
+                    <span class="LOGO">LOGO</span>
+                    <br>
+                    <p class="address">台北市中山區南京東路二段124號10樓</p>
+                    <p><span>E.</span>Contact@jcomgroup.com</p>
+                    <p><span>P.</span>+886 2 2508 2802</p>
+                    <p><span>F.</span>+886 2 2508 2630</p>
+                </div>
+            </div>
+            <div id="footerList" class="col-12 col-md-8">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-4 col-md-2 flBlock">
+                            <span class="listTitle">解決方案</span>
+                            <ul>
+                                <li>解決方案</li>
+                                <li>服務項目</li>
+                            </ul>
+                        </div>
+                        <div class="col-8 col-md-4 col-half-offset flBlock">
+                            <span class="listTitle">產品介紹</span>
+                            <ul>
+                                <li>Microsoft Dynamics 365</li>
+                                <li>Microsoft Azure</li>
+                                <li>Microsoft Power Platform</li>
+                                <li>Microsoft Office 365</li>
+                            </ul>
+                        </div>
+                        <div class="col-4 col-md-2 col-half-offset flBlock">
+                            <span class="listTitle">常見問題</span>
+                            <ul></ul>
+                        </div>
+                        <div class="col-4 col-md-2 col-half-offset flBlock">
+                           <span class="listTitle">關於我們</span>
+                            <ul></ul>
+                        </div>
+                        <div class="col-4 col-md-2 col-half-offset flBlock">
+                            <span class="listTitle">聯絡我們</span>
+                            <ul></ul>
+                        </div>
+                    </div>
+                    <span>Copyright © 2020 JCOM Group All Rights Reserved</span>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--------------------------------------------------------->
+    
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
