--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <ul></ul>
                         </div>
                     </div>
-                    <span>Copyright © 2020 JCOM Group All Rights Reserved</span>
+                    <span class="footext">Copyright © 2020 JCOM Group All Rights Reserved</span>
                 </div>
             </div>
         </div>
