1. 微調各種區塊字體設定不對的問題 2. 調整動畫閃跳的問題 3. 調整head背景顏色錯誤的問題 4. 微調各種區塊 padding 及對位的問題 5. 引入字型檔案

--- a/index.html
+++ b/index.html
@@ -18,44 +18,43 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbg pt-2 navbar-expand-md">
-            <div class="container-fluid">
-                <a class="navbar-brand logo-style" href="#">LOGO</a>
-                <!--------------------------------->
-                <a class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <rect stroke="#0f0f00" stroke-opacity="0" id="svg_2" height="15.35806" width="114" y="71.50357" x="68.5" opacity="undefined" fill="#e3332b" />
-                            <rect stroke="#0f0f00" id="svg_3" height="3.0625" width="29.25" y="18.41667" x="5.64583" opacity="undefined" fill-opacity="null" stroke-opacity="0" stroke-dasharray="null" stroke-width="null" fill="#e3332b" />
-                            <rect stroke="#0f0f00" id="svg_6" height="3.0625" width="29.25" y="31.22915" x="5.70833" opacity="undefined" fill-opacity="null" stroke-opacity="0" stroke-dasharray="null" stroke-width="null" fill="#e3332b" />
-                        </g>
-                    </svg>
-                </a>
-                <!--------------------------------->
-                <div id="navbarCollapse" class="collapse navbar-collapse">
-                    <!-- class="collapse navbar-collapse" -->
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a href="#" class="nav-link">解決方案</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">產品介紹</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">關於我們</a></li>
-                    </ul>
-                    <button type="button" class="btn btn-style head-bar-btn">聯絡我們</button>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <!------------------------------------------------------------------------->
     <div id="mainVision">
-        <!----------------------------------->
+        <header>
+            <nav class="navbar navbg pt-2 navbar-expand-md">
+                <div class="container-fluid">
+                    <a class="navbar-brand logo-style" href="#">LOGO</a>
+                    <!--------------------------------->
+                    <a class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                        <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <rect stroke="#0f0f00" stroke-opacity="0" id="svg_2" height="15.35806" width="114" y="71.50357" x="68.5" opacity="undefined" fill="#e3332b" />
+                                <rect stroke="#0f0f00" id="svg_3" height="3.0625" width="29.25" y="18.41667" x="5.64583" opacity="undefined" fill-opacity="null" stroke-opacity="0" stroke-dasharray="null" stroke-width="null" fill="#e3332b" />
+                                <rect stroke="#0f0f00" id="svg_6" height="3.0625" width="29.25" y="31.22915" x="5.70833" opacity="undefined" fill-opacity="null" stroke-opacity="0" stroke-dasharray="null" stroke-width="null" fill="#e3332b" />
+                            </g>
+                        </svg>
+                    </a>
+                    <!--------------------------------->
+                    <div id="navbarCollapse" class="collapse navbar-collapse">
+                        <!-- class="collapse navbar-collapse" -->
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item"><a href="#" class="nav-link">解決方案</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">產品介紹</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">關於我們</a></li>
+                        </ul>
+                        <button type="button" class="btn btn-style head-bar-btn">聯絡我們</button>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <!------------------------------------------------------------------------->
         <div id="mVcontent">
             <div id="mVText">
                 <span class="mVTitle">了解你需要的，提供你適合的</span>
                 <br>
                 <span class="mVDes">八年以上的微軟ERP顧問服務經驗，微軟 Partner Network 認證夥伴，提供 Microsoft Dynamics 365、 Microsoft Azure 雲端平台等顧問服務。</span>
             </div>
-            <a href="#prd_1" id="scroll-down" class="scrollBtnStyle"></a>
+            <a href="#prd_1_tag" id="scroll-down" class="scrollBtnStyle"></a>
         </div>
         <!----------------------------------->
     </div>
@@ -71,16 +70,18 @@
                 </div>
                 <!-------------------------------------------->
                 <div class="prd-content-block row">
-                    <div class="prd-img col-12 col-md-4">
+                    <div class="prd-img col-12 col-md-5">
                         <img src="img/foto.png">
                     </div>
-                    <div class="prd-text col-12 col-md-8">
+                    <div class="prd-text col-12 col-md-7">
                         <h1>替您規劃最適合的解決方案</h1>
                         <p>ERP系統的成功，須涉及許多專業如 會計、資訊、成本、管理等，一般中小企業不容易全面駕馭。可創的專業團隊就像是您的智囊團，緊密配合企業現狀提供所需協助，您只要全心全意進行你的計劃，不讓艱深、費神的技術問題磨耗你的熱情。</p>
                         <p>除此之外，加入ERP系統後，企業能得到多少的幫助，決定關鍵就在於系統能否跟隨企業內外的變化而改變。我們不僅能快速貼合組織運作，隨時間深化、細化各個作業環節，更可以運用各種管理技術、結合新科技裝置來逐步提升效率，是您永續經營的最佳夥伴。</p>
                         <button type="button" class="btn btn-style main-bar-btn">了解方案</button>
                     </div>
                 </div>
+                <!-------------------------------------------->
+                <div id="prd_1_tag"></div>
             </div>
         </div>
         <!----------------------------------->
@@ -94,10 +95,10 @@
                 </div>
                 <!-------------------------------------------->
                 <div class="prd-content-block row">
-                    <div class="prd-img col-12 col-md-4">
+                    <div class="prd-img col-12 col-md-5">
                         <img src="img/foto.png">
                     </div>
-                    <div class="prd-text col-12 col-md-8">
+                    <div class="prd-text col-12 col-md-7">
                         <h1>替您規劃最適合的解決方案</h1>
                         <p>ERP系統的成功，須涉及許多專業如 會計、資訊、成本、管理等，一般中小企業不容易全面駕馭。可創的專業團隊就像是您的智囊團，緊密配合企業現狀提供所需協助，您只要全心全意進行你的計劃，不讓艱深、費神的技術問題磨耗你的熱情。</p>
                         <p>除此之外，加入ERP系統後，企業能得到多少的幫助，決定關鍵就在於系統能否跟隨企業內外的變化而改變。我們不僅能快速貼合組織運作，隨時間深化、細化各個作業環節，更可以運用各種管理技術、結合新科技裝置來逐步提升效率，是您永續經營的最佳夥伴。</p>
