--- a/pj_aietec/index.html
+++ b/pj_aietec/index.html
@@ -23,7 +23,7 @@
     <nav id="idxheadrow" class="" data-toggle="affix">
       <div id="logo-row" class="container">
         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="#"><img src="images/LOGO-001.png" alt="" /></a>
+          <a class="navbar-brand" href="#"><img src="images/logoimg.png" alt="" /></a>
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#all_menus"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <div class="listicon"><div class="bar"></div><div class="bar"></div><div class="bar"></div></div>
