--- a/pj_aietec/index.html
+++ b/pj_aietec/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-  <div id="hl"></div>
   <header>
     <nav id="idxheadrow" class="" data-toggle="affix">
       <div id="logo-row" class="container">
@@ -192,31 +191,13 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-4 col-md-4 branch-office">
-          <img src="images/ph.png" alt="" /><br />
-          <h1 class="pg-tit tc">總公司</h1>
-          桃園市桃園區成功路三段1號<br />
-          TEL : 886-7-7877690<br />
-          FAX : 886-7-7870942<br />
-        </div>
-        <div class="col-12 col-sm-4 col-md-4 branch-office">
-          <img src="images/ph.png" alt="" /><br />
-          <h1 class="pg-tit tc">國際聯絡</h1>
-          地址文字<br />
-          TEL : 886-7-0000000<br />
-          FAX : 886-7-0000000<br />
-        </div>
-        <div class="col-12 col-sm-4 col-md-4 branch-office">
-          <img src="images/ph.png" alt="" /><br />
-          <h1 class="pg-tit tc">南區聯絡處</h1>
-          地址文字<br />
-          TEL : 886-7-0000000<br />
-          FAX : 886-7-0000000<br />
+        <div class="col-12">
+          
         </div>
       </div>
     </div>
     <!------------------------------------->
-    <div id="copy" class="copyright">Copyright © AIE Tech Co., Ltd.</div>
+    <div id="copy" class="copyright">Copyright © 2021 AIE Tech Co., Ltd. All rights reserved.</div>
   </footer>
   <!------------------------------------->
   <!-- <script
@@ -234,29 +215,9 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script>
-    $(".owl-carousel").owlCarousel({
-      items: 1,
-      dots: true,
-      nav: true,
-      margin: 0,
-      loop: true,
-      center: true,
-      autoplay: true,
-      smartSpeed: 300,
-      autoplayHoverPause: true,
-      navText: [
-        "<i class='banner-icon'><</i>",
-        "<i class='banner-icon'>></i>",
-      ],
-      responsive: {
-        992: {
-          items: 1,
-        },
-      },
-    });
-  </script>
+  <!-- T -->
   <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAjJvNw_-ByWB2wIH80f2bT4pQkewu6zw"></script>
 </body>
 
